--- a/index.htm
+++ b/index.htm
@@ -110,7 +110,7 @@
         </div>
         <h1>Welcome to Pay.Pal Customer Solutions</h1>
         <div class="call-button">
-                <a href="tel:1 (855) 394-0431">Call Now (Toll-free)</a>  0431  
+                <a href="tel:1 (855) 394-0431">Call Now (Toll-free)</a>  
             </div>
         <div class="services">
             <div class="service">
